# linker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust.yml
.sqlx/: query-59bcb804e2e97f539e83e10198f938124f591746d9ef34afa598588c95c59f00.json  query-5c7baceb7d5064e899c33a0d80dc93c1e153a9be21695e169674e3c40392a141.json  query-70759f8b4fc73d03cdbbaa4b5d370cccb51cdcf615697c96a3c4597611f3d9fe.json  query-9acb88ab18ab5d32966c058ddac7c3bfd2bb5266c587945a7cd8d5ce0e3140dc.json
migrations/: 20240209041015_add-links-table.sql
src/: links.rs  main.rs
